attendee/myholiday/adventure-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: adventure-holiday
  name: adventure-route
spec:
  host: URL
  path: "/adventure"
  to:
    kind: Service
    name: adventure-holiday
    weight: 100
