attendee/myholiday/package-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: package-holiday
  name: package-route
spec:
  host: URL
  path: "/package"
  to:
    kind: Service
    name: package-holiday
    weight: 100
