attendee/myholiday/short-break-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: short-holiday
  name: short-holiday-route
spec:
  host: URL
  path: "/short-break"
  to:
    kind: Service
    name: short-holiday
    weight: 100
